--- a/zgscx0002/src/main/webapp/app/view/Parametros.view.xml
+++ b/zgscx0002/src/main/webapp/app/view/Parametros.view.xml
@@ -1,8 +1,60 @@
-<core:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc"
-	xmlns="sap.m" xmlns:form="sap.ui.layout.form" controllerName="zgscx0002.app.controller.Parametros"
+<core:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" 
+	xmlns="sap.m" xmlns:form="sap.ui.layout.form" xmlns:l="sap.ui.layout" controllerName="zgscx0002.app.controller.Parametros"
 	xmlns:html="http://www.w3.org/1999/xhtml">
 			<Page id="panelEdit" enableScrolling="true" title="{i18n>TitulosParam}" class="sapUiContentPadding">
-				
+				<content>
+					<form:SimpleForm layout="ResponsiveGridLayout" editable="true" labelSpanL="4" labelSpanM="4" columnsL="2" columnsM="2">
+						<form:content>
+							<l:VerticalLayout class="sapUiContentPadding" width="100%">	
+								<Label text="Nombre Job" />
+								<Input value="" width="100%" id="txtJobname" />
+	
+								<Label text="Usuario" />
+								<Input value="" width="100%" id="txtUsername" />
+							</l:VerticalLayout>	
+								
+							<l:VerticalLayout class="sapUiContentPadding" width="100%">	
+								<Label text="Fecha Inicial" />
+								<DatePicker
+											id="datFromDate" width="50%"
+											valueFormat="yyyy-MM-dd"
+											class="sapUiSmallMarginBottom"/>
+								<Label text="Fecha Final" />
+								<DatePicker
+											id="datToDate" width="50%"
+											
+											class="sapUiSmallMarginBottom"/>
+							</l:VerticalLayout>							
+							
+							<l:VerticalLayout class="sapUiContentPadding" width="100%">	
+								<CheckBox id="chcSchedul" text="Previsto" />
+								<CheckBox id="chcReady" text="Liberado" />
+								<CheckBox id ="chc" text="Preparado" />
+							</l:VerticalLayout>	
+							
+							<l:VerticalLayout class="sapUiContentPadding" width="100%">								
+								<CheckBox text="Activo" />
+								<CheckBox text="Terminado" />
+								<CheckBox text="Cancelado" />	
+							</l:VerticalLayout>
+																					
+						</form:content>
+					
+					</form:SimpleForm>	
+					<Bar>
+						<contentRight>
+							<Button id="acepBtn" type="Emphasized" text="Consultar"
+								press="handleConsultarPress" />
+						</contentRight>
+					</Bar>						
+									
+				</content>	
+				<!-- <footer>
+					<Toolbar>
+						<ToolbarSpacer/>
+						<Button text="Consultar" type="Accept" />
+					</Toolbar>
+				</footer>	-->
 			</Page>
 
 </core:View>
